--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+html,
+body {
+    height: 100vh;
+
+}
+/* *{
+    -webkit-transition: 10ms;
+    transition: 100ms;
+    -webkit-transition-timing-function: cubic-bezier(0.42,0,0.58,1);
+    transition-timing-function: cubic-bezier(0.42,0,0.58,1);
+} */
+
