--- a/src/app/components/draw/draw.component.html
+++ b/src/app/components/draw/draw.component.html
@@ -1,20 +1,37 @@
+
 <svg class="myDrawArea">
-<!--     <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="red" />
- -->    
-    <circle *ngFor="let circle of circles; let i = index" (focus)="selectObject(i)" (keydown.delete)="deleteObject(i)" [attr.cx]="circle.x" [attr.cy]="circle.y" [attr.r]="circle.r" fill="red"/>
+  
+  <!--<circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="red" /> !-->
 
-    <ellipse cx="200" cy="80" rx="100" ry="50"
-  style="fill:yellow;stroke:purple;stroke-width:2" />
-<svg>
-    <line x1="0" y1="0" x2="200" y2="200" style="stroke:rgb(255,0,0);stroke-width:2" />
+  <g app-circle></g>
+  <g app-square></g>
 
-</svg>
+    <g>
+      <svg >
+        <ellipse cx="200" cy="80" rx="100" ry="50"
+      style="fill:yellow;stroke:purple;stroke-width:2" cdkDrag/>
+      </svg>
+    </g>
 
-  <rect x="400" y="600" width="300" height="100" style="fill:rgb(0,0,255);stroke-width:3;stroke:rgb(0,0,0)" />
+  <svg>
+      <line x1="0" y1="0" x2="200" y2="200" style="stroke:rgb(255,0,0);stroke-width:2" />
+  </svg>
+
+  <svg>
+    <rect x="400" y="600" width="300" height="100" style="fill:rgb(0,0,255);stroke-width:3;stroke:rgb(0,0,0)" />
+  </svg>
   
   <!-- this is a square -->
-  <rect x="200" y="500" width="100" height="100" style="fill:rgb(0,255,0);stroke-width:3;stroke:rgb(0,0,0)" />
-
-
+  <svg>
+    <rect x="200" y="500" width="100" height="100" style="fill:rgb(0,255,0);stroke-width:3;stroke:rgb(0,0,0)" />
+  </svg>
 
 </svg>
+
+<div class="myShapes">
+  <button>Press for circle</button>
+  <button>Press for rectangle</button>
+  <button>Press for ellipse</button>
+  <button>Press for square</button>
+
+</div>
