--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,27 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~font-awesome/Css/font-awesome.css';
+@import '../node_modules/@syncfusion/ej2-base/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-buttons/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-popups/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-splitbuttons/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-inputs/styles/material.css';
+
+html,
+body{
+  padding:0;margin:0;
+  width:100%;height:100%;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  background: #837dff;
+}
+
+app-root{
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
