basic version of resize

--- a/src/app/components/draw/draw.component.css
+++ b/src/app/components/draw/draw.component.css
@@ -1,6 +1,10 @@
-svg {
+ng-container {
     height: 100%;
     width: 100%;
     background-color: grey;
     border: 2px solid green;
+}
+
+.resizable {
+    
 }
