--- a/src/app/components/draw/draw.component.html
+++ b/src/app/components/draw/draw.component.html
@@ -1,37 +1,24 @@
-
-<svg class="myDrawArea">
-  
-  <!--<circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="red" /> !-->
-
-  <g app-circle></g>
-  <g app-square></g>
-
-    <g>
-      <svg >
-        <ellipse cx="200" cy="80" rx="100" ry="50"
-      style="fill:yellow;stroke:purple;stroke-width:2" cdkDrag/>
-      </svg>
-    </g>
-
-  <svg>
-      <line x1="0" y1="0" x2="200" y2="200" style="stroke:rgb(255,0,0);stroke-width:2" />
-  </svg>
-
-  <svg>
-    <rect x="400" y="600" width="300" height="100" style="fill:rgb(0,0,255);stroke-width:3;stroke:rgb(0,0,0)" />
-  </svg>
-  
-  <!-- this is a square -->
-  <svg>
-    <rect x="200" y="500" width="100" height="100" style="fill:rgb(0,255,0);stroke-width:3;stroke:rgb(0,0,0)" />
-  </svg>
-
+<svg style="width:100%; height: 100%">
+  <svg app-circle [mouseX]="mouseX" [mouseY]="mouseY" [isMouseDown] = 'isMouseDown'></svg>
+  <svg app-square   [mouseX]="mouseX" [mouseY]="mouseY" [isMouseDown]='isMouseDown'></svg>
+  <svg app-rectangle [mouseX]="mouseX" [mouseY]="mouseY" [isMouseDown]='isMouseDown'></svg>
+  <svg app-ellipse  [mouseX]="mouseX" [mouseY]="mouseY" [isMouseDown]='isMouseDown'></svg>
 </svg>
 
+<!--   <span>
+  </span>
+  <span>
+    
+  </span>
+  
+  <svg>
+      <line x1="0" y1="0" x2="200" y2="200" style="stroke:rgb(255,0,0);stroke-width:2" cdkDrag class='resizable'/>
+  </svg>
+
+
 <div class="myShapes">
-  <button>Press for circle</button>
+  <button (click)="func()">Press for circle</button>
   <button>Press for rectangle</button>
   <button>Press for ellipse</button>
   <button>Press for square</button>
-
-</div>
+</div> -->
