--- a/src/app/components/draw/draw.component.html
+++ b/src/app/components/draw/draw.component.html
@@ -1,4 +1,4 @@
-<svg style="width:100%; height: 100%">
+<svg style="width:100%; height: 100%; stroke:black; stroke-width:2px">
   <svg app-circle [mouseX]="mouseX" [mouseY]="mouseY" [isMouseDown] = 'isMouseDown'></svg>
   <svg app-square   [mouseX]="mouseX" [mouseY]="mouseY" [isMouseDown]='isMouseDown'></svg>
   <svg app-rectangle [mouseX]="mouseX" [mouseY]="mouseY" [isMouseDown]='isMouseDown'></svg>
