--- a/src/app/components/shapes/square/square.component.html
+++ b/src/app/components/shapes/square/square.component.html
@@ -9,6 +9,7 @@
         [attr.fill]="square.color" 
         cdkDrag
         appBoxResize
+        [cdkDragDisabled] = 'dragFlag'
         [(width)]="square.sideLength"
         [(height)]="square.sideLength"
         [mouseX]="mouseX"
