--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -3,7 +3,7 @@
                [backgroundColor]="" [color]="">
   <mat-tab label="View">
     <div class="block select">
-      <i class="menu fa fa-arrows fa-4x"></i>
+      <i class="menu fa fa-arrows fa-4x" (click)="myService.toggleDrag()"></i>
       <div class="grid">
         <i class="fa fa-scissors fa-2x"><span>Cut</span></i>
         <i class="fa fa-clone fa-2x"><span>Clone</span></i>
