--- a/src/app/components/draw/draw.component.html
+++ b/src/app/components/draw/draw.component.html
@@ -1,8 +1,9 @@
 <svg style="width:100%; height: 100%; stroke:black; stroke-width:2px">
-  <svg app-circle [mouseX]="mouseX" [mouseY]="mouseY" [isMouseDown] = 'isMouseDown'></svg>
-  <svg app-square   [mouseX]="mouseX" [mouseY]="mouseY" [isMouseDown]='isMouseDown'></svg>
-  <svg app-rectangle [mouseX]="mouseX" [mouseY]="mouseY" [isMouseDown]='isMouseDown'></svg>
-  <svg app-ellipse  [mouseX]="mouseX" [mouseY]="mouseY" [isMouseDown]='isMouseDown'></svg>
+  <svg app-circle [mouseX]="mouseX" [mouseY]="mouseY" [isMouseDown] = 'isMouseDown' [dragFlag]="myService.dragFlag"></svg>
+  <svg app-square   [mouseX]="mouseX" [mouseY]="mouseY" [isMouseDown]='isMouseDown' [dragFlag]="myService.dragFlag"></svg>
+  <svg app-rectangle [mouseX]="mouseX" [mouseY]="mouseY" [isMouseDown]='isMouseDown' [dragFlag]="myService.dragFlag"></svg>
+  <svg app-ellipse  [mouseX]="mouseX" [mouseY]="mouseY" [isMouseDown]='isMouseDown' [dragFlag]="myService.dragFlag"></svg>
+ <!--  <path [attr.d]="pathData" ></path>  -->
 </svg>
 
 <!--   <span>
