--- a/src/app/components/shapes/ellipse/ellipse.component.html
+++ b/src/app/components/shapes/ellipse/ellipse.component.html
@@ -7,7 +7,8 @@
         [attr.rx]="ellipse.rx" 
         [attr.ry]="ellipse.ry" 
         [attr.fill]="ellipse.color" 
-        style="stroke: lightcoral; stroke-width: 2px;"
+        style="stroke: black; stroke-width: 2px;"
+        [cdkDragDisabled] = 'dragFlag'
         cdkDrag
         appMyResize
         [(r)] = ellipse.rx
