--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,15 @@
+
 app-nav-bar{
   width: 100%;
+  height: 30%;
 }
-app-drawing-space{width: 70%}
+.flex{
+  height: 70%;
+  display: flex;
+  flex-wrap: nowrap;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+app-drawing-space{width: 80%}
 app-side-bar{width: 20%}
