--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-nav-bar></app-nav-bar>
-<app-drawing-space></app-drawing-space>
-<app-side-bar></app-side-bar>
+<div class="flex">
+  <app-drawing-space></app-drawing-space>
+  <app-side-bar></app-side-bar>
+</div>
