--- a/src/app/drawing-space/drawing-space.component.css
+++ b/src/app/drawing-space/drawing-space.component.css
@@ -1,10 +1,10 @@
 .sheet{
-  width: 70%;
-  height: 70%;
+  width: 100%;
+  height: 100%;
   min-width: 30%;
   min-height: 30%;
-  max-width: 70%;
-  max-height: 70%;
+  /*max-width: 70%;*/
+  /*max-height: 100%;*/
   background-color: #FFF;
   resize: vertical;
   box-sizing: border-box;
