--- a/src/app/components/shapes/circle/circle.component.html
+++ b/src/app/components/shapes/circle/circle.component.html
@@ -11,6 +11,7 @@
     [cdkDragDisabled] = 'dragFlag'
     cdkDrag
     appMyResize
+    [resizeFlag]="resizeFlag"
     [(r)] = circle.r
     [mouseX]="mouseX"
     [mouseY]="mouseY"
