--- a/src/app/components/shapes/ellipse/ellipse.component.html
+++ b/src/app/components/shapes/ellipse/ellipse.component.html
@@ -2,14 +2,14 @@
     <ellipse *ngFor="let ellipse of ellipses; let i = index" 
         (focus)="selectObject(i)" 
         (keydown.delete)="deleteObject(i)" 
-        [attr.cx]="ellipse.cx" 
-        [attr.cy]="ellipse.cy" 
+        [attr.cx]="ellipse.x" 
+        [attr.cy]="ellipse.y" 
         [attr.rx]="ellipse.rx" 
         [attr.ry]="ellipse.ry" 
         [attr.fill]="ellipse.color" 
         style="stroke: black; stroke-width: 2px;"
-        [cdkDragDisabled] = 'dragFlag'
         cdkDrag
+        [cdkDragDisabled] = 'dragFlag'
         appMyResize
         [(r)] = ellipse.rx
         [mouseX]="mouseX"
