--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -4,7 +4,6 @@
 
   <mat-tab label="File">
     <div class="block file">
-      <i class="menu fa fa-arrows fa-4x" (click)="myService.toggleDrag()" ></i>
       <div class="grid">
         <i class="fa fa-floppy-o fa-2x"><span>Save</span></i>
         <i class="fa fa-download fa-2x"><span>Save as</span></i>
@@ -16,11 +15,11 @@
 
   <mat-tab label="Home">
     <div class="block home">
-      <i class="menu fa fa-arrows fa-4x"></i>
+      <i class="menu fa fa-arrows fa-4x" (click)="myService.toggleDrag()"></i>
       <div class="grid">
         <i class="fa fa-scissors fa-2x"><span>Cut</span></i>
         <i class="fa fa-undo fa-2x"><span>Undo</span></i>
-        <i class="fa fa-expand fa-2x"><span>Resize</span></i>
+        <i class="fa fa-expand fa-2x" (click)="myService.toggleResize()"><span>Resize</span></i>
       </div>
 
       <div class="grid">
