--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -35,7 +35,7 @@
     <div class="block draw">
       <i class="menu fa fa-paint-brush fa-2x"></i>
       <div class="grid">
-        <i class="one fa fa-circle fa-2x"></i>
+        <i class="one fa fa-circle fa-2x" (click)="drawCircle()"></i>
         <i class="one fa fa-flash fa-2x"></i>
         <i class="one fa fa-moon-o fa-2x"></i>
         <i class="one fa fa-moon-o fa-2x"></i>
