--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -1,4 +1,4 @@
 <div class="side">
-  <input ejs-colorpicker type="color" id="colorpicker" [inline]="true" [showButtons]="false" />
+  <!-- <input ejs-colorpicker type="color" id="colorpicker" [inline]="true" [showButtons]="false" /> -->
 </div>
 
