--- a/src/app/draw-sheet/draw-sheet.component.html
+++ b/src/app/draw-sheet/draw-sheet.component.html
@@ -15,7 +15,12 @@
 
   <div id="control_container" class="white_board--controls mat-elevation-z8">
     <button mat-mini-fab matTooltip="Color palette" matTooltipPosition="right" aria-label="Ink Color Picker">
-      <input role="button" type="color" [value]="inkColor" [style.background]="inkColor" [(ngModel)]="inkColor"
+      <input role="button" type="color" [value]="fillColor" [style.background]="fillColor" [(ngModel)]="fillColor"
+             aria-label="Color Picker" />
+    </button>
+
+    <button mat-mini-fab matTooltip="Color palette" matTooltipPosition="right" aria-label="Ink Color Picker">
+      <input role="button" type="color" [value]="strokeColor" [style.background]="strokeColor" [(ngModel)]="strokeColor"
              aria-label="Color Picker" />
     </button>
 
@@ -25,8 +30,8 @@
         <path
           d="M12.78,7.66,10.35,5.22,4,11.56V14H6.44Zm2.09-2.1a.42.42,0,0,0,0-.6L13,3.13a.42.42,0,0,0-.6,0L11.29,4.28l2.44,2.44Z">
         </path>
-        <polygon [attr.fill]='inkColor' points="17 13 17 17 3 17 17 13"></polygon>
-        <path [attr.fill]='inkColor' d="M3,17L17,13L17,16L16,16L16,14.34L10.18,16L17,16L17,17z"></path>
+        <polygon [attr.fill]='fillColor' points="17 13 17 17 3 17 17 13"></polygon>
+        <path [attr.fill]='fillColor' d="M3,17L17,13L17,16L16,16L16,14.34L10.18,16L17,16L17,17z"></path>
         <path d="M12.78,7.66,11.56,6.44,4,14H6.44Zm2.09-2.1a.42.42,0,0,0,0-.6L14,4,12.51,5.49l1.22,1.22Z"></path>
       </svg>
     </button>
@@ -36,7 +41,7 @@
     <button mat-mini-fab [ngClass]='selectedButton["brush"] ? "primary_border":"no_border"'
             (click)='setSelection("brush")' matTooltip="Brush" matTooltipPosition="right" aria-label="Brush">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-        <path [attr.fill]='inkColor'
+        <path [attr.fill]='fillColor'
               d="M15.238,3.989L4.208,14.998c-0.302,0.302-0.503,0.689-0.576,1.11l-0.615,3.567	c-0.133,0.772,0.538,1.442,1.31,1.308l3.525-0.613c0.418-0.073,0.804-0.273,1.104-0.573L20.011,8.761L15.238,3.989z"
               opacity=".65"></path>
         <path
@@ -49,48 +54,99 @@
     </button>
 
     <button mat-mini-fab [ngClass]='selectedButton["brush"] ? "primary_border":"no_border"'
-            (click)='createcircle()' matTooltip="Brush" matTooltipPosition="right" aria-label="Brush">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-        <path [attr.fill]='inkColor'
-              d="M15.238,3.989L4.208,14.998c-0.302,0.302-0.503,0.689-0.576,1.11l-0.615,3.567	c-0.133,0.772,0.538,1.442,1.31,1.308l3.525-0.613c0.418-0.073,0.804-0.273,1.104-0.573L20.011,8.761L15.238,3.989z"
-              opacity=".65"></path>
-        <path
-          d="M13.077,6.146l-8.869,8.852c-0.302,0.302-0.503,0.689-0.576,1.11l-0.24,1.388l3.108,3.108l1.351-0.235	c0.418-0.073,0.804-0.273,1.104-0.573l8.894-8.878L13.077,6.146z">
-        </path>
-        <path
-          d="M19.832,8.94l0.179-0.179c1.318-1.318,1.318-3.455,0-4.773c-1.318-1.318-3.455-1.318-4.773,0l-0.179,0.179L19.832,8.94z">
-        </path>
-      </svg>
+            (click)='createShape("circle")' matTooltip="Brush" matTooltipPosition="right" aria-label="Brush">
+<!--      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">-->
+<!--        <path [attr.fill]='fillColor'-->
+<!--              d="M15.238,3.989L4.208,14.998c-0.302,0.302-0.503,0.689-0.576,1.11l-0.615,3.567	c-0.133,0.772,0.538,1.442,1.31,1.308l3.525-0.613c0.418-0.073,0.804-0.273,1.104-0.573L20.011,8.761L15.238,3.989z"-->
+<!--              opacity=".65"></path>-->
+<!--        <path-->
+<!--          d="M13.077,6.146l-8.869,8.852c-0.302,0.302-0.503,0.689-0.576,1.11l-0.24,1.388l3.108,3.108l1.351-0.235	c0.418-0.073,0.804-0.273,1.104-0.573l8.894-8.878L13.077,6.146z">-->
+<!--        </path>-->
+<!--        <path-->
+<!--          d="M19.832,8.94l0.179-0.179c1.318-1.318,1.318-3.455,0-4.773c-1.318-1.318-3.455-1.318-4.773,0l-0.179,0.179L19.832,8.94z">-->
+<!--        </path>-->
+<!--      </svg>-->
+      Circle
     </button>
 
     <button mat-mini-fab [ngClass]='selectedButton["brush"] ? "primary_border":"no_border"'
-            (click)='createrect()' matTooltip="Brush" matTooltipPosition="right" aria-label="Brush">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-        <path [attr.fill]='inkColor'
-              d="M15.238,3.989L4.208,14.998c-0.302,0.302-0.503,0.689-0.576,1.11l-0.615,3.567	c-0.133,0.772,0.538,1.442,1.31,1.308l3.525-0.613c0.418-0.073,0.804-0.273,1.104-0.573L20.011,8.761L15.238,3.989z"
-              opacity=".65"></path>
-        <path
-          d="M13.077,6.146l-8.869,8.852c-0.302,0.302-0.503,0.689-0.576,1.11l-0.24,1.388l3.108,3.108l1.351-0.235	c0.418-0.073,0.804-0.273,1.104-0.573l8.894-8.878L13.077,6.146z">
-        </path>
-        <path
-          d="M19.832,8.94l0.179-0.179c1.318-1.318,1.318-3.455,0-4.773c-1.318-1.318-3.455-1.318-4.773,0l-0.179,0.179L19.832,8.94z">
-        </path>
-      </svg>
+            (click)='createShape("rect")' matTooltip="Brush" matTooltipPosition="right" aria-label="Brush">
+<!--      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">-->
+<!--        <path [attr.fill]='fillColor'-->
+<!--              d="M15.238,3.989L4.208,14.998c-0.302,0.302-0.503,0.689-0.576,1.11l-0.615,3.567	c-0.133,0.772,0.538,1.442,1.31,1.308l3.525-0.613c0.418-0.073,0.804-0.273,1.104-0.573L20.011,8.761L15.238,3.989z"-->
+<!--              opacity=".65"></path>-->
+<!--        <path-->
+<!--          d="M13.077,6.146l-8.869,8.852c-0.302,0.302-0.503,0.689-0.576,1.11l-0.24,1.388l3.108,3.108l1.351-0.235	c0.418-0.073,0.804-0.273,1.104-0.573l8.894-8.878L13.077,6.146z">-->
+<!--        </path>-->
+<!--        <path-->
+<!--          d="M19.832,8.94l0.179-0.179c1.318-1.318,1.318-3.455,0-4.773c-1.318-1.318-3.455-1.318-4.773,0l-0.179,0.179L19.832,8.94z">-->
+<!--        </path>-->
+<!--      </svg>-->
+      Rect
     </button>
 
     <button mat-mini-fab [ngClass]='selectedButton["brush"] ? "primary_border":"no_border"'
-            (click)='createS()' matTooltip="Brush" matTooltipPosition="right" aria-label="Brush">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-        <path [attr.fill]='inkColor'
-              d="M15.238,3.989L4.208,14.998c-0.302,0.302-0.503,0.689-0.576,1.11l-0.615,3.567	c-0.133,0.772,0.538,1.442,1.31,1.308l3.525-0.613c0.418-0.073,0.804-0.273,1.104-0.573L20.011,8.761L15.238,3.989z"
-              opacity=".65"></path>
-        <path
-          d="M13.077,6.146l-8.869,8.852c-0.302,0.302-0.503,0.689-0.576,1.11l-0.24,1.388l3.108,3.108l1.351-0.235	c0.418-0.073,0.804-0.273,1.104-0.573l8.894-8.878L13.077,6.146z">
-        </path>
-        <path
-          d="M19.832,8.94l0.179-0.179c1.318-1.318,1.318-3.455,0-4.773c-1.318-1.318-3.455-1.318-4.773,0l-0.179,0.179L19.832,8.94z">
-        </path>
-      </svg>
+            (click)='createShape("triangle")' matTooltip="Brush" matTooltipPosition="right" aria-label="Brush">
+<!--      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">-->
+<!--        <path [attr.fill]='fillColor'-->
+<!--              d="M15.238,3.989L4.208,14.998c-0.302,0.302-0.503,0.689-0.576,1.11l-0.615,3.567	c-0.133,0.772,0.538,1.442,1.31,1.308l3.525-0.613c0.418-0.073,0.804-0.273,1.104-0.573L20.011,8.761L15.238,3.989z"-->
+<!--              opacity=".65"></path>-->
+<!--        <path-->
+<!--          d="M13.077,6.146l-8.869,8.852c-0.302,0.302-0.503,0.689-0.576,1.11l-0.24,1.388l3.108,3.108l1.351-0.235	c0.418-0.073,0.804-0.273,1.104-0.573l8.894-8.878L13.077,6.146z">-->
+<!--        </path>-->
+<!--        <path-->
+<!--          d="M19.832,8.94l0.179-0.179c1.318-1.318,1.318-3.455,0-4.773c-1.318-1.318-3.455-1.318-4.773,0l-0.179,0.179L19.832,8.94z">-->
+<!--        </path>-->
+<!--      </svg>-->
+      Triangle
+    </button>
+
+    <button mat-mini-fab [ngClass]='selectedButton["brush"] ? "primary_border":"no_border"'
+            (click)='createShape("ellipse")' matTooltip="Brush" matTooltipPosition="right" aria-label="Brush">
+<!--      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">-->
+<!--        <path [attr.fill]='fillColor'-->
+<!--              d="M15.238,3.989L4.208,14.998c-0.302,0.302-0.503,0.689-0.576,1.11l-0.615,3.567	c-0.133,0.772,0.538,1.442,1.31,1.308l3.525-0.613c0.418-0.073,0.804-0.273,1.104-0.573L20.011,8.761L15.238,3.989z"-->
+<!--              opacity=".65"></path>-->
+<!--        <path-->
+<!--          d="M13.077,6.146l-8.869,8.852c-0.302,0.302-0.503,0.689-0.576,1.11l-0.24,1.388l3.108,3.108l1.351-0.235	c0.418-0.073,0.804-0.273,1.104-0.573l8.894-8.878L13.077,6.146z">-->
+<!--        </path>-->
+<!--        <path-->
+<!--          d="M19.832,8.94l0.179-0.179c1.318-1.318,1.318-3.455,0-4.773c-1.318-1.318-3.455-1.318-4.773,0l-0.179,0.179L19.832,8.94z">-->
+<!--        </path>-->
+<!--      </svg>-->
+      Ellpise
+    </button>
+
+    <button mat-mini-fab [ngClass]='selectedButton["brush"] ? "primary_border":"no_border"'
+            (click)='createShape("wedge")' matTooltip="Brush" matTooltipPosition="right" aria-label="Brush">
+<!--      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">-->
+<!--        <path [attr.fill]='fillColor'-->
+<!--              d="M15.238,3.989L4.208,14.998c-0.302,0.302-0.503,0.689-0.576,1.11l-0.615,3.567	c-0.133,0.772,0.538,1.442,1.31,1.308l3.525-0.613c0.418-0.073,0.804-0.273,1.104-0.573L20.011,8.761L15.238,3.989z"-->
+<!--              opacity=".65"></path>-->
+<!--        <path-->
+<!--          d="M13.077,6.146l-8.869,8.852c-0.302,0.302-0.503,0.689-0.576,1.11l-0.24,1.388l3.108,3.108l1.351-0.235	c0.418-0.073,0.804-0.273,1.104-0.573l8.894-8.878L13.077,6.146z">-->
+<!--        </path>-->
+<!--        <path-->
+<!--          d="M19.832,8.94l0.179-0.179c1.318-1.318,1.318-3.455,0-4.773c-1.318-1.318-3.455-1.318-4.773,0l-0.179,0.179L19.832,8.94z">-->
+<!--        </path>-->
+<!--      </svg>-->
+      Wedge
+    </button>
+
+    <button mat-mini-fab [ngClass]='selectedButton["brush"] ? "primary_border":"no_border"'
+            (click)='createShape("text")' matTooltip="Brush" matTooltipPosition="right" aria-label="Brush">
+<!--      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">-->
+<!--        <path [attr.fill]='fillColor'-->
+<!--              d="M15.238,3.989L4.208,14.998c-0.302,0.302-0.503,0.689-0.576,1.11l-0.615,3.567	c-0.133,0.772,0.538,1.442,1.31,1.308l3.525-0.613c0.418-0.073,0.804-0.273,1.104-0.573L20.011,8.761L15.238,3.989z"-->
+<!--              opacity=".65"></path>-->
+<!--        <path-->
+<!--          d="M13.077,6.146l-8.869,8.852c-0.302,0.302-0.503,0.689-0.576,1.11l-0.24,1.388l3.108,3.108l1.351-0.235	c0.418-0.073,0.804-0.273,1.104-0.573l8.894-8.878L13.077,6.146z">-->
+<!--        </path>-->
+<!--        <path-->
+<!--          d="M19.832,8.94l0.179-0.179c1.318-1.318,1.318-3.455,0-4.773c-1.318-1.318-3.455-1.318-4.773,0l-0.179,0.179L19.832,8.94z">-->
+<!--        </path>-->
+<!--      </svg>-->
+      Text
     </button>
 
     <button mat-mini-fab [ngClass]='selectedButton["eraser"] ? "primary_border":"no_border"'
