--- a/src/app/draw-sheet/draw-sheet.component.html
+++ b/src/app/draw-sheet/draw-sheet.component.html
@@ -1,4 +1,4 @@
-<section class="white_board--wrapper">
+<section class="white_board--wrapper sheet">
 <!--  <button class="menu_button" mat-icon-button [matMenuTriggerFor]="menu" aria-label="Icon-button with a menu">-->
 <!--    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">-->
 <!--      <path-->
