--- a/src/app/draw-sheet/draw-sheet.component.html
+++ b/src/app/draw-sheet/draw-sheet.component.html
@@ -180,6 +180,7 @@
         </path>
       </svg>
     </button>
+    <button (click)="undo()">undo</button>
 
 <!--    <button mat-mini-fab (click)='undo()' matTooltip="Undo" matTooltipPosition="right" aria-label="Undo">-->
 <!--      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">-->
