Enhance Undo functionality

--- a/src/app/draw-sheet/draw-sheet.component.html
+++ b/src/app/draw-sheet/draw-sheet.component.html
@@ -181,6 +181,10 @@
       </svg>
     </button>
     <button (click)="undo()">undo</button>
+    <button (click)="redo()">redo</button>
+    <button (click)="delete()">delete</button>
+    <button (click)="save()">Save</button>
+    <button (click)="load()">load</button>
 
 <!--    <button mat-mini-fab (click)='undo()' matTooltip="Undo" matTooltipPosition="right" aria-label="Undo">-->
 <!--      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">-->
