--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -14,24 +14,38 @@
   -webkit-filter: url("#goo");
 }
 
+
+.gooey-menu svg{
+  width: 3em;
+  height: 3em;
+  stroke: #DDD;
+  stroke-width: 1pt;
+  stroke-miterlimit: 10;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-dasharray: 75;
+  transition: .3s ease-in-out;
+}
+
+
 .gooey-menu .button {
   position: relative;
   float: left;
   margin: 10px;
   height: 60px;
+  padding: 5px;
   width: 60px;
   border-radius: 100%;
   /*border:2px solid #08c;*/
   background: rgb(20,20,20);
   background: linear-gradient(0deg, rgba(20,20,20,1) 0%, rgba(34,34,34,1) 47%, rgb(44, 44, 44) 100%);
   cursor: pointer;
+  box-sizing: border-box;
   background-position:center;
   background-size:contain;
   z-index:10;
 }
-.gooey-menu .button:hover {
-  border: 3px solid rgba(47, 255, 0, 0.99);
-}
+
 .gooey-menu .button:not(:first-child) {
   position:absolute;
   top:30px;
@@ -43,20 +57,26 @@
   transform: scale(0);
   -webkit-transform: scale(0);
 }
+
 .gooey-menu .button:nth-child(3) {
   z-index:3;
-  transition: all 0.6s, border-color 0.3s;
-  -webkit-transition: all 0.6s, border-color 0.3s;
+  transition: all 0.6s ease 0.2s;
+  /*-webkit-transition: all 0.6s, border-color 0.3s;*/
 }
 .gooey-menu .button:nth-child(4) {
   z-index:2;
-  transition: all 1.2s, border-color 0.3s;
-  -webkit-transition: all 1.2s, border-color 0.3s;
+  transition: all 0.6s ease 0.2s;
+  /*-webkit-transition: all 1.2s, border-color 0.3s;*/
 }
 .gooey-menu .button:nth-child(5) {
   z-index:1;
-  transition: all 1.8s, border-color 0.3s;
-  -webkit-transition: all 1.8s, border-color 0.3s;
+  transition: all 0.6s ease 0.4s;
+  /*-webkit-transition: all 1.8s, border-color 0.3s;*/
+}
+.gooey-menu .button:nth-child(6) {
+  z-index:1;
+  transition: all 0.6s ease 0.4s;
+  /*-webkit-transition: all 1.8s, border-color 0.3s;*/
 }
 
 .gooey-menu .button .burger {
@@ -86,49 +106,56 @@
   top:calc(50% + 6px);
 }
 
-.gooey-menu #chc:checked ~ label .button .burger {
+.gooey-menu #active:checked ~ label .button .burger {
   top:50%;
   height:0;
 }
-.gooey-menu #chc:checked ~ label .button .burger:before,
-.gooey-menu #chc:checked ~ label .button .burger:after {
+.gooey-menu #active:checked ~ label .button .burger:before,
+.gooey-menu #active:checked ~ label .button .burger:after {
   top:calc(50% - 2px);
 }
-.gooey-menu #chc:checked ~ label .button .burger:before {
+.gooey-menu #active:checked ~ label .button .burger:before {
   transform:rotate(-225deg);
   -webkit-transform:rotate(-225deg);
 }
-.gooey-menu #chc:checked ~ label .button .burger:after {
+.gooey-menu #active:checked ~ label .button .burger:after {
   transform:rotate(225deg);
   -webkit-transform:rotate(225deg);
 }
 
-.gooey-menu #chc:checked ~ .button:not(:first-child) {
+.gooey-menu #active:checked ~ .button:not(:first-child) {
   top:0;
+  left: 49%;
   height: 60px;
   width: 60px;
   border-width: 2px;
   opacity: 1;
-  transform: scale(1);
-  -webkit-transform: scale(1);
+  transform: scale(0.8);
+  -webkit-transform: scale(0.8);
   transition-timing-function: ease-in-out;
   -webkit-transition-timing-function: ease-in-out;
 }
-.gooey-menu #chc:checked ~ .button:nth-child(3) {
+
+.gooey-menu #active:checked ~ .button:nth-child(3) {
   left: 80px;
 }
 
-.gooey-menu #chc:checked ~ .button:nth-child(4) {
-  left: 160px;
+.gooey-menu #active:checked ~ .button:nth-child(4) {
+  left: -80px;
 }
 
-.gooey-menu #chc:checked ~ .button:nth-child(5) {
-  left: 240px;
+.gooey-menu #active:checked ~ .button:nth-child(5) {
+  left: 150px;
+}
+
+.gooey-menu #active:checked ~ .button:nth-child(6) {
+  left: -150px;
 }
 /*--------------------------------- Start Header -----------------------------------*/
 
 .navbar{
   top: 0;
+  left: 47%;
   /*width: 100%;*/
   /*height: 29%;*/
   /*height: 50px;*/
