--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -6,7 +6,7 @@
         <div class="burger"></div>
       </div>
     </label>
-    <svg (click)="save()" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+    <svg [matMenuTriggerFor]="menu" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
          class="button press" viewBox="0 0 23 27"
          mat-mini-fab matTooltip="Save File" matTooltipPosition="below">
       <path d="M18,9h-2c-0.6,0-1,0.4-1,1s0.4,1,1,1h2c0.6,0,1,0.4,1,1v7c0,0.6-0.4,1-1,1H6c-0.6,0-1-0.4-1-1v-7c0-0.6,0.4-1,1-1h2c0.6,0,1-0.4,1-1S8.6,9,8,9H6c-1.7,0-3,1.3-3,3v7c0,1.7,1.3,3,3,3h12c1.7,0,3-1.3,3-3v-7C21,10.3,19.7,9,18,9z M8.3,14.7l3,3c0.2,0.2,0.4,0.3,0.7,0.3c0.3,0,0.5-0.1,0.7-0.3l3-3c0.4-0.4,0.4-1,0-1.4c-0.4-0.4-1-0.4-1.4,0L13,14.6V3c0-0.6-0.4-1-1-1s-1,0.4-1,1v11.6l-1.3-1.3c-0.4-0.4-1-0.4-1.4,0C7.9,13.7,7.9,14.3,8.3,14.7z"></path>
@@ -27,20 +27,30 @@
       <path d="M11,18H13V16H11V18M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,6A4,4 0 0,0 8,10H10A2,2 0 0,1 12,8A2,2 0 0,1 14,10C14,12 11,11.75 11,15H13C13,12.75 16,12.5 16,10A4,4 0 0,0 12,6Z"></path>
     </svg>
 
+    <mat-menu #menu="matMenu" mat-mini-fab matTooltipPosition="below">
+      <a mat-menu-item (click)="save()" aria-label="Save as image">Save as image</a>
+      <a mat-menu-item href="https://github.com/SujalShah3234/White-Board/issues" aria-label="Report Bug">Report bug</a>
+      <a mat-menu-item href="https://github.com/SujalShah3234" aria-label="Developer Name">Made with ❤️by Osama Belal</a>
+    </mat-menu>
+
   </div>
 
   <div id="help">
-    <p>
-      klsdfhskl flshf skldfh slkfhsdkf s dklfhd flhfl kshfkl dhslkdfh dklf hsdfkl shdfkl sdhf<br>
-      klsdfhskl flshf skldfh slkfhsdkf s dklfhd flhfl kshfkl dhslkdfh dklf hsdfkl shdfkl sdhf<br>
-      klsdfhskl flshf skldfh slkfhsdkf s dklfhd flhfl kshfkl dhslkdfh dklf hsdfkl shdfkl sdhf<br>
-      klsdfhskl flshf skldfh slkfhsdkf s dklfhd flhfl kshfkl dhslkdfh dklf hsdfkl shdfkl sdhf<br>
-      klsdfhskl flshf skldfh slkfhsdkf s dklfhd flhfl kshfkl dhslkdfh dklf hsdfkl shdfkl sdhf<br>
-      klsdfhskl flshf skldfh slkfhsdkf s dklfhd flhfl kshfkl dhslkdfh dklf hsdfkl shdfkl sdhf<br>
-      klsdfhskl flshf skldfh slkfhsdkf s dklfhd flhfl kshfkl dhslkdfh dklf hsdfkl shdfkl sdhf<br>
-      klsdfhskl flshf skldfh slkfhsdkf s dklfhd flhfl kshfkl dhslkdfh dklf hsdfkl shdfkl sdhf<br>
-      klsdfhskl flshf skldfh slkfhsdkf s dklfhd flhfl kshfkl dhslkdfh dklf hsdfkl shdfkl sdhf<br>
-    </p>
+    <div>
+      <h2>Paint Guide</h2>
+      <p>
+        klsdfhskl flshf skldfh slkfhsdkf s dklfhd flhfl kshfkl dhslkdfh dklf hsdfkl shdfkl sdhf<br>
+        klsdfhskl flshf skldfh slkfhsdkf s dklfhd flhfl kshfkl dhslkdfh dklf hsdfkl shdfkl sdhf<br>
+        klsdfhskl flshf skldfh slkfhsdkf s dklfhd flhfl kshfkl dhslkdfh dklf hsdfkl shdfkl sdhf<br>
+        klsdfhskl flshf skldfh slkfhsdkf s dklfhd flhfl kshfkl dhslkdfh dklf hsdfkl shdfkl sdhf<br>
+        klsdfhskl flshf skldfh slkfhsdkf s dklfhd flhfl kshfkl dhslkdfh dklf hsdfkl shdfkl sdhf<br>
+        klsdfhskl flshf skldfh slkfhsdkf s dklfhd flhfl kshfkl dhslkdfh dklf hsdfkl shdfkl sdhf<br>
+        klsdfhskl flshf skldfh slkfhsdkf s dklfhd flhfl kshfkl dhslkdfh dklf hsdfkl shdfkl sdhf<br>
+        klsdfhskl flshf skldfh slkfhsdkf s dklfhd flhfl kshfkl dhslkdfh dklf hsdfkl shdfkl sdhf<br>
+        klsdfhskl flshf skldfh slkfhsdkf s dklfhd flhfl kshfkl dhslkdfh dklf hsdfkl shdfkl sdhf<br>
+      </p>
+      <button (click)="hide()">Close</button>
+    </div>
   </div>
 
   <svg xmlns="http://www.w3.org/2000/svg" style="display:none;">
