--- a/src/app/drawing-space/drawing-space.component.html
+++ b/src/app/drawing-space/drawing-space.component.html
@@ -10,7 +10,7 @@
 <!--  <mat-menu #menu="matMenu" xPosition="before" yPosition="below">-->
 <!--    <a mat-menu-item (click)="saveAsImage()" aria-label="Save as image">Save as image</a>-->
 <!--    <a mat-menu-item href="https://github.com/SujalShah3234/White-Board/issues" aria-label="Report Bug">Report bug</a>-->
-<!--    <a mat-menu-item href="https://github.com/SujalShah3234" aria-label="Developer Name">Made with ❤️by Osama Belal</a>-->
+<!--    <a mat-menu-item href="https://github.com/SujalShah3234" aria-label="Developer Name">Made with ❤️by Omar Tammam</a>-->
 <!--  </mat-menu>-->
 
   <div id="control_container_L" class="white_board--controls left mat-elevation-z8">
