--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -28,9 +28,8 @@
     </svg>
 
     <mat-menu #menu="matMenu" mat-mini-fab matTooltipPosition="below">
-      <a mat-menu-item (click)="save()" aria-label="Save as image">Save as image</a>
-      <a mat-menu-item href="https://github.com/SujalShah3234/White-Board/issues" aria-label="Report Bug">Report bug</a>
-      <a mat-menu-item href="https://github.com/SujalShah3234" aria-label="Developer Name">Made with ❤️by Osama Belal</a>
+      <a mat-menu-item>Save as XML</a>
+      <a mat-menu-item>Save as JSon</a>
     </mat-menu>
 
   </div>
