--- a/src/app/drawing-space/drawing-space.component.css
+++ b/src/app/drawing-space/drawing-space.component.css
@@ -94,6 +94,10 @@ button:hover svg.R{
   100% {transform: rotate(1440deg);}
 }
 
+.mat-menu-content:not(:empty){
+  padding: 10px 20px;
+}
+
 .white_board--wrapper {
   display: flex;
   width: 100%;
