Update Navigation Bar Functionality

--- a/src/app/drawing-space/drawing-space.component.html
+++ b/src/app/drawing-space/drawing-space.component.html
@@ -84,7 +84,7 @@
       </svg>
     </button>
 
-    <mat-menu class="scroll-menu" #menu="matMenu" mat-mini-fab matTooltipPosition="before">
+    <mat-menu #menu="matMenu" mat-mini-fab matTooltipPosition="before">
       Stroke Width
       <mat-slider min="0" max="100" step="1" showTickMarks discrete [displayWith]="formatLabel">
         <input matSliderThumb>
